# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
description = "Apache OpenDAL™ Development Tools"
name = "odev"

authors = ["Apache OpenDAL <dev@opendal.apache.org>"]
edition = "2021"
homepage = "https://opendal.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/opendal"
rust-version = "1.75"
version = "0.0.1"

[dependencies]
anyhow = { version = "1.0.95" }
clap = { version = "4.5.23", features = ["derive"] }
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-rs"] }
heck = { version = "0.5.0" }
ignore = { version = "0.4.23" }
log = { version = "0.4.22" }
logforth = { version = "0.21.0", default-features = false }
markdown = { version = "1.0.0-alpha.21" }
minijinja = { version = "2.5.0" }
regex = { version = "1.11.1" }
semver = { version = "1.0.25" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = { version = "1.0.138", features = ["preserve_order"] }
sha2 = { version = "0.10.8" }
syn = { version = "2.0.91", features = ["visit", "full", "extra-traits"] }
tar = { version = "0.4.43" }
toml_edit = { version = "0.22.23", features = ["serde"] }
which = { version = "7.0.1" }

[dev-dependencies]
pretty_assertions = "1.4.1"
