[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Gateway"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oay"
repository = "https://github.com/datafuselabs/opendal"
version = "0.11.3"

[dependencies]
actix-web = "4.1.0"
anyhow = "1.0.59"
clap = { version = "3.2.16", features = ["cargo"] }
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.17"
opendal = "0.11.3"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "macros"] }

# Please comment the following patch while releasing.
[patch.crates-io]
opendal = { path = "../" }
