[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Gateway"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oay"
repository = "https://github.com/datafuselabs/opendal"
version = "0.17.4"

[dependencies]
actix-web = "4.1"
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
opendal = "0.17"
percent-encoding = "2.1"
sluice = "0.5.5"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }

# Please comment the following patch while releasing.
[patch.crates-io]
opendal = { path = "../" }
