[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Gateway"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oay"
repository = "https://github.com/datafuselabs/opendal"
version = "0.19.6"

[dependencies]
actix-web = "4"
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
opendal = { version = "0.21", path = "../" }
percent-encoding = "2"
sluice = "0.5"
tokio = { version = "1.20", features = ["rt-multi-thread", "macros"] }
