[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Command Line Interface"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oli"
repository = "https://github.com/datafuselabs/opendal"
version = "0.11.3"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.16", features = ["cargo"] }
env_logger = "0.9.0"
log = "0.4.17"
opendal = "0.11.3"

# Please comment the following patch while releasing.
[patch.crates-io]
opendal = { path = "../" }
