[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Command Line Interface"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oli"
repository = "https://github.com/datafuselabs/opendal"
version = "0.17.4"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["cargo"] }
env_logger = "0.9"
log = "0.4"
opendal = "0.17"
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

# Please comment the following patch while releasing.
[patch.crates-io]
opendal = { path = "../" }
