[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Command Line Interface"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oli"
repository = "https://github.com/datafuselabs/opendal"
version = "0.19.6"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "string"] }
env_logger = "0.10"
log = "0.4"
opendal = { version = "0.21", path = "../" }
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
