[package]
name = "opendal_test"
version = "0.0.0"
edition = "2021"
authors = ["Databend Authors <opensource@datafuselabs.com>"]
license = "Apache-2.0"
description = "Open Data Access Layer that connect the whole world together."
repository = "https://github.com/datafuselabs/opendal"
keywords = ["storage", "data", "s3"]
categories = ["filesystem"]
publish = false

[dependencies]
opendal = { path = ".." }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v4"] }