# Copyright 2022 Datafuse Labs
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
authors = ["Databend Authors <opensource@datafuselabs.com>"]
categories = ["filesystem"]
description = "OpenDAL Command Line Interface"
edition = "2021"
homepage = "https://opendal.databend.rs/"
keywords = ["storage", "data", "s3", "fs", "azblob"]
license = "Apache-2.0"
name = "oli"
repository = "https://github.com/datafuselabs/opendal"
version = "0.19.6"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "string"] }
env_logger = "0.10"
log = "0.4"
opendal = { version = "0.28", path = "../../" }
tokio = { version = "1.20", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
