# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "oli"
version = "0.19.6"

description = "OpenDAL Command Line Interface"
categories = ["filesystem"]
keywords = ["storage", "data", "s3", "fs", "azblob"]

authors = ["OpenDAL Contributors <dev@opendal.apache.org>"]
homepage = "https://opendal.apache.org/"
license = "Apache-2.0"
repository = "https://github.com/apache/incubator-opendal"

edition = "2021"

publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "string"] }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
opendal = { version = "0.30", path = "../../" }
tokio = { version = "1.26", features = ["fs", "macros", "rt-multi-thread"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
